manifests/04-apps/clients.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
  namespace: clientspace
  labels: { app: netshoot, role: client }
spec:
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
        - weight: 100
          podAffinityTerm:
            topologyKey: kubernetes.io/hostname
            labelSelector: { matchLabels: { role: client } }
  containers:
    - name: client
      image: localhost/kubesandboxing/client:1.0
      imagePullPolicy: IfNotPresent
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        allowPrivilegeEscalation: false
        capabilities: { drop: ["ALL"] }
---
apiVersion: v1
kind: Pod
metadata:
  name: trusted
  namespace: clientspace
  labels: { app: trusted, role: client }
spec:
  serviceAccountName: trusted-client
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
        - weight: 100
          podAffinityTerm:
            topologyKey: kubernetes.io/hostname
            labelSelector: { matchLabels: { role: client } }
  containers:
    - name: client
      image: localhost/kubesandboxing/client:1.0
      imagePullPolicy: IfNotPresent
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        allowPrivilegeEscalation: false
        capabilities: { drop: ["ALL"] }
---
apiVersion: v1
kind: Pod
metadata:
  name: untrusted
  namespace: clientspace
  labels: { app: untrusted, role: client }
spec:
  serviceAccountName: untrusted-client
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
        - weight: 100
          podAffinityTerm:
            topologyKey: kubernetes.io/hostname
            labelSelector: { matchLabels: { role: client } }
  containers:
    - name: client
      image: localhost/kubesandboxing/client:1.0
      imagePullPolicy: IfNotPresent
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        allowPrivilegeEscalation: false
        capabilities: { drop: ["ALL"] }
